ribbit/tests/ui/mismatch_size.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/mismatch_size.rs:9:8
  |
9 |     a: A,
  |        ^ the evaluated program panicked at 'Annotated size 1 is too small to fit type "A" of size 16', $DIR/tests/ui/mismatch_size.rs:9:8
  |
  = note: this error originates in the macro `$crate::concat_panic` which comes from the expansion of the macro `::ribbit::private::concat_assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> tests/ui/mismatch_size.rs:6:1
  |
6 | #[ribbit::pack(size = 16)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the attribute macro `ribbit::pack` (in Nightly builds, run with -Z macro-backtrace for more info)
